# SportyClaw-Autoplacer

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  README.md  bankroll.py  engine.py  health.py  main.py  nixpacks.toml  reporter.py  requirements.txt  sportyclaw_telethon.session
bot/: commands.py  listener.py  main.py  mock_handler.py  parser.py  pyproject.toml  reporter.py  sportybet.py  telethon_listener.py
docs/: How to increase Speed.md
sportybet/: client.py
tests/: test_bankroll.py  test_client.py  test_engine.py  test_health.py  test_listener.py  test_parser.py
