[project]
name = "sportybet-bot"
version = "1.0.0"
description = "Telegram bot that auto-places SportyBet bets from group booking codes"
requires-python = ">=3.11"

dependencies = [
    "telethon==1.34.0",
    "apscheduler==3.10.4",
    "selenium==4.18.1",
    "webdriver-manager==4.0.1",
    "python-dotenv==1.0.1",
]

[project.scripts]
start = "main:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends.legacy:build"

[tool.setuptools.packages.find]
where = ["."]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-asyncio>=0.23",
]
